@@ -76,6 +76,8 @@ def msgpack_encode_default(obj):
         return str(obj)
     if isinstance(obj, datetime.datetime):
         return time.mktime(obj.utctimetuple())
+    if isinstance(obj, datetime.date):
+        return obj.strftime("%Y-%m-%d")
 
     raise TypeError("Unknown type: %r" % (obj,))
 
